# mail

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  CONTRIBUTORS.md  DCO  Dockerfile  INTERSWARM_README.md  README.md  SPEC-LICENSE  SPEC-PATENT-LICENSE  SUPERVISOR_RESPONSE_FLOW_SOLUTION.md  THIRD_PARTY_NOTICES.md  TRADEMARKS.md  llms.txt  mail.toml  pyproject.toml  pytest.ini  swarm_registry.json  swarms.json  swarms_interswarm.json  test-swarm-registry.json
.github/workflows/: python-publish.yml  tests.yml
docs/: ADDRESS_METADATA_README.md  AGENTS_MAIL_PRIMER.md  AUTH_TOKEN_REF_IMPLEMENTATION.md  CLAUDE_MAIL_PRIMER.md  INTERSWARM_README.md  INTERSWARM_RESPONSE_SOLUTION.md  MAIL_PRIMER.md  README.md  SUPERVISOR_RESPONSE_FLOW_SOLUTION.md  TESTING.md  agents-and-tools.md  api.md  architecture.md  broadcast-tools.md  cli.md  client.md  configuration.md  docker.md  examples.md  factories.md  interswarm.md  message-format.md  quickstart.md  registry.md  security.md  swarm_registry_config.md  swarm_registry_security.md  swarms-schema.json  testing-plan.md  testing.md  troubleshooting.md
docs/explanations/: README.md  addressing-model.md  architecture.md  delivery-model.md  documentation-system.md  mail-v1-legacy.md  mail-v2-overview.md  mailing-lists.md  security-model.md  webhook-delivery.md
docs/howtos/: README.md  authenticate-user-agent.md  initialize-memory-backend.md  manage-mailing-lists.md  manage-swarms.md  manage-user-agents.md  manage-webhooks.md  regenerate-api-artifacts.md  run-daemon.md  run-server.md  run-tests.md  send-message-cli.md
docs/references/: README.md  admin-cli.md  client-cli.md  configuration.md  daemon-cli.md  data-models.md  http-api.md  protocol-specification.md  repository-layout.md  server-cli.md  storage-backends.md
docs/stdlib/: README.md  http.md
docs/tutorials/: README.md  build-minimal-http-client.md  build-webhook-receiver.md  run-local-mail.md  send-first-message.md
registries/: example.json  swarm-alpha.json  swarm-beta.json
scripts/: build_cli_docs.py  build_llms_txt.py  build_third_party_licenses.py  bump-version.py  create_db_tables.py  demo_client.py  generate_openapi.py  migrate_messages_v2.py  multi_swarm_demo.py  run_mafia.py  run_ui_dev.py  single_swarm_demo.py  smoke_test_anthropic_thinking.py  smoke_test_multiturn.py  smoke_test_oai_interleaved.py  smoke_test_swarm.py  smoke_test_websearch.py  swarm_export.py  swarm_indexer.py  test_reasoning_traces.py
scripts/output/: mail.toml
spec/: MAIL-core.schema.json  MAIL-interswarm.schema.json  SPEC.md  openapi.yaml  validate_samples.py
spec/examples/: README.md  interswarm_direct.json  interswarm_request.json  interswarm_response.json  mail_message_broadcast.json  mail_message_broadcast_complete.json  mail_message_interrupt.json  mail_message_request.json  mail_message_response.json  mail_message_task_complete.json
src/acp/: auth.py  core.py  executor.py  interswarm_router.py  logger.py  message.py  server.py  server_simple.py  store.py  swarm_registry.py  tools.py
src/mail/: __init__.py  api.py  auth.py  cli.py  client.py  core.py  events.py  executor.py  interswarm_router.py  logger.py  message.py  server.py  server_simple.py  store.py  summarizer.py  swarm_registry.py  tools.py  url_scheme.py  utils.py
src/mail/client/: README.md  cli.py  pyproject.toml
src/mail/client/docs/: README.md
src/mail/client/docs/reference/: admin-panel.md  cli.md
src/mail/client/docs/tutorials/: quickstart.md
src/mail/client/src/mail_client/: __init__.py  admin_panel.py  api.py  cli.py  client.py  types.py  utils.py
src/mail/client/src/mail_client/commands/: __init__.py  _body.py  _box_filters.py  agent_delete.py  agent_get.py  agent_list.py  agent_post.py  compose.py  daemon_delete.py  daemon_get.py  daemon_list.py  daemon_post.py  drafts.py  drafts_open.py  drafts_patch.py  forward.py  inbox.py  inbox_open.py  list_delete.py  list_get.py  list_get_admin.py  list_list.py  list_member_delete.py  list_member_post.py  list_patch.py  list_post.py  list_subscribe.py  list_unsubscribe.py  lists.py  login.py  outbox.py  outbox_open.py  ping.py  refresh.py  reply.py  send.py  swarm_delete.py  swarm_get.py  swarm_list.py  swarm_post.py  (+12 more)
src/mail/daemon/: pyproject.toml
src/mail/daemon/src/mail_daemon/: cli.py  logger.py
src/mail/daemon/src/mail_daemon/maild/: api.py
src/mail/protocol/: __init__.py  constants.py  pyproject.toml
src/mail/protocol/core/: address.py  instance.py  message.py  task.py
src/mail/protocol/interswarm/: attachment.py  message.py  swarm.py  task.py
src/mail/protocol/src/mail_protocol/: __init__.py  cli.py  cli_help.py  constants.py  metadata.py
src/mail/protocol/src/mail_protocol/core/: __init__.py  auth.py  constants.py  drafts.py  inbox.py  lists.py  message.py  messages.py  outbox.py  queues.py  server.py  swarm.py  swarms.py  task.py  trash.py  user_agents.py  validators.py  webhooks.py
src/mail/protocol/src/mail_protocol/interswarm/: __init__.py  message.py  swarm.py  task.py
src/mail/protocol/src/mail_protocol/network/: requests.py  responses.py  webhooks.py
src/mail/server/: .env.example  README.md  api.py  auth.py  example.py  pyproject.toml  types.py  validators.py
src/mail/server/docs/: README.md
src/mail/server/docs/reference/: backends.md  cli.md  http.md
src/mail/server/docs/tutorials/: quickstart.md
src/mail/server/src/mail_server/: __init__.py  api.py  auth.py  backend_init.py  cli.py  example.py  logging.py  server.py  types.py  utils.py  validators.py
src/mail/server/src/mail_server/backends/: base.py
src/mail/server/src/mail_server/backends/memory/: api.py  fs.py  init.py
src/mail/server/src/mail_server/backends/sqlite/: api.py  database.py  init.py  migrate.py  repositories.py  schema.py  serializers.py
src/mail/server/src/mail_server/routers/: admin.py  auth.py  daemon.py  drafts.py  inbox.py  lists.py  outbox.py  swarms.py  trash.py
tests/: conftest.py
tests/contract/: conftest.py  test_openapi_drift.py  test_openapi_request_bodies.py  (+3 more)
ui/: CLAUDE.md  package.json  pnpm-lock.yaml
ui/lib/: api.ts  (+1 more)
(+313 files in other folders)
