[project]
name = "mail"
version = "1.0.1"
description = "Multi-Agent Interface Layer reference implementation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dict2xml>=1.7.7",
    "langchain-core>=0.3.72",
    "pydantic>=2.11.7",
    "fastapi>=0.104.1",
    "uvicorn>=0.24.0",
    "toml>=0.10.2",
    "ujson>=5.8.0",
    "langmem>=0.0.29",
    "rich>=13.0.0",
    "langgraph>=0.6.3",
    "aiohttp>=3.9.0",
    "pyjwt>=2.10.1",
    "langchain>=0.3.27",
    "types-toml>=0.10.8.20240310",
    "types-ujson>=5.10.0.20250822",
    "sse-starlette>=3.0.2",
    "litellm>=1.76.2",
    "numpydoc>=1.9.0",
    "openai>=1.106.1",
]
license = "Apache-2.0"
classifiers = [
    "License :: OSI Approved :: Apache Software License",
]
license-files = ["LICENSE", "NOTICE", "THIRD_PARTY_NOTICES.md"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mail"]

[tool.mypy]
ignore_missing_imports=true

[dependency-groups]
dev = [
    "mypy>=1.17.1",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=7.0.0",
    "referencing>=0.36.2",
    "ruff>=0.12.12",
]

[tool.ruff]
target-version = "py312"
indent-width = 4

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
extend-select = ["TID252", "I", "UP"]

[project.scripts]
mail = "mail.cli:main"
