[project]
name = "mail-swarms"
version = "2.0.0"
description = "Multi-Agent Interface Layer v2 workspace meta-package"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mail-client>=2.0.0",
    "mail-server>=2.0.0",
    "mail-daemon>=2.0.0",
    "mail-protocol>=2.0.0",
]
license = "Apache-2.0"
classifiers = [
    "License :: OSI Approved :: Apache Software License",
]
license-files = ["LICENSE", "NOTICE", "THIRD_PARTY_NOTICES.md"]

[project.scripts]
mail = "mail_client.cli:main"
mail-server = "mail_server.cli:main"
mail-daemon = "mail_daemon.cli:main"
mail-protocol = "mail_protocol.cli:main"


[project.optional-dependencies]
legacy = [
    "dict2xml>=1.7.7",
    "langchain-core>=0.3.72",
    "pydantic>=2.11.7",
    "fastapi>=0.104.1",
    "uvicorn>=0.24.0",
    "toml>=0.10.2",
    "ujson>=5.8.0",
    "langmem>=0.0.29",
    "rich>=13.0.0",
    "pyreadline3>=3.5.4; platform_system == 'Windows'",
    "langgraph>=0.6.3",
    "aiohttp>=3.9.0",
    "pyjwt>=2.10.1",
    "langchain>=0.3.27",
    "types-toml>=0.10.8.20240310",
    "types-ujson>=5.10.0.20250822",
    "sse-starlette>=3.0.2",
    "litellm>=1.76.2",
    "numpydoc>=1.9.0",
    "openai>=1.106.1",
    "fastmcp>=2.12.5",
    "asyncpg>=0.31.0",
]
protocol = ["mail-protocol>=2.0.0"]
server = ["mail-server>=2.0.0", "mail-protocol>=2.0.0"]
client = ["mail-client>=2.0.0", "mail-protocol>=2.0.0"]
daemon = ["mail-daemon>=2.0.0", "mail-protocol>=2.0.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mail"]

[tool.hatch.build.targets.sdist]
# Avoid slow sdist builds by skipping large, non-distribution directories.
exclude = [
    "ui/node_modules",
    "ui/.next",
    "ui/.turbo",
    "src/mail/legacy/ui/node_modules",
    "src/mail/legacy/ui/.next",
    "src/mail/legacy/ui/.turbo",
    "src/mail/legacy/ui/out",
    "src/mail/legacy/ui/build",
    ".venv",
    "dist",
    "logs",
    ".mypy_cache",
    ".ruff_cache",
    ".pytest_cache",
    ".coverage*",
    "**/__pycache__",
]

[tool.mypy]
ignore_missing_imports=true

[tool.coverage.run]
# Scope coverage to the v2 packages; run with `uv run pytest --cov`.
source_pkgs = [
    "mail_protocol",
    "mail_server",
    "mail_client",
    "mail_daemon",
]

[tool.coverage.report]
show_missing = true
skip_covered = true
# Ratchet: raise as coverage grows; never lower (docs/testing-plan.md §7).
fail_under = 65

[dependency-groups]
dev = [
    "mypy>=1.17.1",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=7.0.0",
    "PyYAML>=6.0.2",
    "referencing>=0.36.2",
    "respx>=0.23.1",
    "ruff>=0.12.12",
    "tqdm>=4.67.1",
]

[tool.ruff]
target-version = "py312"
indent-width = 4

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
extend-select = ["TID252", "I", "UP"]

[tool.uv.sources]
mail-protocol = { workspace = true }
mail-server = { workspace = true }
mail-client = { workspace = true }
mail-daemon = { workspace = true }

[tool.uv.workspace]
members = [
    "src/mail/client",
    "src/mail/protocol",
    "src/mail/server",
    "src/mail/daemon",
]
