[project]
name = "mail-swarms"
version = "2.0.1"
description = "Multi-Agent Interface Layer v2 workspace meta-package"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Lockstep meta-package: pin members to this exact release. Bump all five
    # versions together (see scripts/bump-version or `uv version --package`).
    "mail-swarms-client==2.0.1",
    "mail-swarms-server==2.0.1",
    "mail-swarms-daemon==2.0.1",
    "mail-swarms-protocol==2.0.1",
]
license = "Apache-2.0"
classifiers = [
    "License :: OSI Approved :: Apache Software License",
]
license-files = ["LICENSE", "NOTICE", "THIRD_PARTY_NOTICES.md"]

[project.scripts]
mail = "mail_client.cli:main"
mail-server = "mail_server.cli:main"
mail-daemon = "mail_daemon.cli:main"
mail-protocol = "mail_protocol.cli:main"


[project.optional-dependencies]
legacy = [
    "dict2xml>=1.7.7",
    "langchain-core>=0.3.72",
    "pydantic>=2.11.7",
    "fastapi>=0.104.1",
    "uvicorn>=0.24.0",
    "toml>=0.10.2",
    "ujson>=5.8.0",
    "langmem>=0.0.29",
    "rich>=13.0.0",
    "pyreadline3>=3.5.4; platform_system == 'Windows'",
    "langgraph>=0.6.3",
    "aiohttp>=3.9.0",
    "pyjwt>=2.10.1",
    "langchain>=0.3.27",
    "types-toml>=0.10.8.20240310",
    "types-ujson>=5.10.0.20250822",
    "sse-starlette>=3.0.2",
    "litellm>=1.76.2",
    "numpydoc>=1.9.0",
    "openai>=1.106.1",
    "fastmcp>=2.12.5",
    "asyncpg>=0.31.0",
]
protocol = ["mail-swarms-protocol==2.0.1"]
server = ["mail-swarms-server==2.0.1", "mail-swarms-protocol==2.0.1"]
client = ["mail-swarms-client==2.0.1", "mail-swarms-protocol==2.0.1"]
daemon = ["mail-swarms-daemon==2.0.1", "mail-swarms-protocol==2.0.1"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# `mail-swarms` is a thin meta-package: it ships no code of its own, it only
# pins the four member distributions. The actual implementation lives in
# `mail-swarms-client`/`-server`/`-daemon`/`-protocol` (which still import as
# `mail_client`/`mail_server`/…), and the v1 `mail` / `mail.legacy` namespace is
# intentionally NOT published here.
[tool.hatch.build.targets.wheel]
bypass-selection = true

[tool.hatch.build.targets.sdist]
# Keep the sdist minimal — no member source trees, no 1.5 GB legacy/ tree.
only-include = ["README.md"]

[tool.mypy]
ignore_missing_imports=true

[tool.coverage.run]
# Scope coverage to the v2 packages; run with `uv run pytest --cov`.
source_pkgs = [
    "mail_protocol",
    "mail_server",
    "mail_client",
    "mail_daemon",
]

[tool.coverage.report]
show_missing = true
skip_covered = true
# Ratchet: raise as coverage grows; never lower (docs/testing-plan.md §7).
fail_under = 65

[dependency-groups]
dev = [
    "mypy>=1.17.1",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=7.0.0",
    "PyYAML>=6.0.2",
    "referencing>=0.36.2",
    "respx>=0.23.1",
    "ruff>=0.12.12",
    "tqdm>=4.67.1",
]

[tool.ruff]
target-version = "py312"
indent-width = 4

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
extend-select = ["TID252", "I", "UP"]

[tool.uv.sources]
mail-swarms-protocol = { workspace = true }
mail-swarms-server = { workspace = true }
mail-swarms-client = { workspace = true }
mail-swarms-daemon = { workspace = true }

[tool.uv.workspace]
members = [
    "src/mail/client",
    "src/mail/protocol",
    "src/mail/server",
    "src/mail/daemon",
]
