[project]
name = "mail-client"
version = "2.0.0"
description = "CLI client for interacting with MAIL servers"
readme = "README.md"
authors = [
    { name = "Addison Kline", email = "77369109+addisonkline@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "pydantic>=2.11.7",
    "mail-protocol>=2.0.0",
]

[project.scripts]
mail-client = "mail_client.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mail_client"]
