[project]
name = "mail-swarms-client"
version = "2.0.1"
description = "CLI client for interacting with MAIL servers"
readme = "README.md"
authors = [
    { name = "Addison Kline", email = "77369109+addisonkline@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "pydantic>=2.11.7",
    "mail-swarms-protocol==2.0.1",
    "rich>=14.1.0",
    "dotenv>=0.9.9",
]

[project.scripts]
mail = "mail_client.cli:main"
mail-admin = "mail_client.admin_panel:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mail_client"]
