[project]
name = "mail-daemon"
version = "2.0.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Addison Kline", email = "77369109+addisonkline@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
daemon = "mail_daemon.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mail_daemon"]

[tool.uv.sources]
mail-protocol = { workspace = true }
