[project]
name = "mail-daemon"
version = "2.0.0"
description = "Daemon implementation for the Multi-Agent Interface Layer (MAIL)"
readme = "README.md"
authors = [
    { name = "Addison Kline", email = "77369109+addisonkline@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "mail-protocol>=2.0.0",
    "pydantic>=2.11.7",
]

[project.scripts]
mail-daemon = "mail_daemon.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mail_daemon"]

[tool.uv.sources]
mail-protocol = { workspace = true }
