[project]
name = "mail-swarms-protocol"
version = "2.0.1"
description = "Types and constants for the Multi-Agent Interface Layer (MAIL) protocol"
readme = "README.md"
authors = [
    { name = "Addison Kline", email = "77369109+addisonkline@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.11.7",
    "validators>=0.35.0",
]

[project.scripts]
mail-protocol = "mail_protocol.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mail_protocol"]
