[project]
name = "mail-server"
version = "2.0.0"
description = "FastAPI server for the Multi-Agent Interface Layer (MAIL)"
readme = "README.md"
authors = [
    { name = "Addison Kline", email = "77369109+addisonkline@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.12.15",
    "fastapi>=0.116.1",
    "mail-protocol>=2.0.0",
    "pydantic>=2.11.7",
    "uvicorn>=0.35.0",
]

[project.scripts]
example = "mail_server.example:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mail_server"]

[tool.uv.sources]
mail-protocol = { workspace = true }
